# kolorowanie-zwarte

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: edge.h  graph.h
cpp/src/: graph.cpp  main.cpp
cpp/test/: test.cpp
graph_generator/: README.md  gen.py
output/: 2loop2bridge_out.dot  2loop2bridge_out.txt  B_15_20_FAILED_out.dot  B_15_20_FAILED_out.txt  B_5_10_out.dot  B_5_10_out.txt  K10_FAILED_out.dot  K10_FAILED_out.txt  K4_out.dot  K4_out.txt  K6_FAILED_out.dot  K6_FAILED_out.txt  K8_FAILED_out.dot  K8_FAILED_out.txt  forest_out.dot  forest_out.txt  loop_out.dot  loop_out.txt  szoltysek2_out.dot  szoltysek2_out.txt  szoltysek_out.dot  szoltysek_out.txt  tree_out.dot  tree_out.txt
test_data/: 2loop2bridge  B_15_20  B_5_10  K10  K6  K8  forest  loop  szoltysek  szoltysek2  tree
